--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "qrcode-terminal": "^0.12.0",
     "vosk": "^0.3.39",
     "whatsapp-web.js": "^1.34.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
